Fixing nav spacing.

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,3 @@
-/***** HEADER NAV SPACING BROKEN AGAIN :( *****/
-
 /***** BASE STYLES *****/
 
 body {
@@ -44,7 +42,9 @@ nav {
 nav ul li{
     display: inline-block;
     /*margin: 2px;*/
-    padding: 8px;
+    /*padding: 8px;*/
+    padding-left: 40px; /*** BUT NOW THE SPACING BETWEEN THE NAV LINKS IS TOO WIDE ***/
+    padding-top: 20px;
     /*vertical-align: bottom; *** DIDN'T CHANGE THE VERTICAL ALIGNMENT, EITHER IN THIS OR THE BLOCK ABOVE ***/
 }
 
@@ -52,6 +52,7 @@ nav ul li a {
     color: green;
     font-size: 18px;
     font-weight: bold;
+    /*padding: 8px;*/
     text-transform: uppercase;
     text-decoration: none;
     /*vertical-align: bottom; *** DIDN'T CHANGE THE VERTICAL ALIGNMENT, EITHER IN THIS OR THE BLOCK ABOVE ***/
